# adjoint

./: CMakeLists.txt  README.md
CMake/: FindOpenEXR.cmake
src/: CMakeLists.txt
src/adjoint/: Adjoint.cpp  Adjoint.hpp  CMakeLists.txt  LambertianSurface.cpp  LambertianSurface.hpp  PinholeCamera.cpp  PinholeCamera.hpp  SolidEnvironment.cpp  SolidEnvironment.hpp  Sphere.cpp  Sphere.hpp  Utility.hpp  adjoint.cpp  config.hpp.in
src/adjoint/cuda/: common.hpp  pinhole_camera.cu  solid_environment.cu
src/adjointlib/: CMakeLists.txt
src/adjointlib/core/: Adjoint.cpp  Adjoint.hpp  Mesh.hpp  PinholeCamera.cpp  PinholeCamera.hpp  Sphere.cpp  Sphere.hpp  Utility.hpp
src/adjointu/: CMakeLists.txt  ImageIO.cpp  ImageIO.hpp
src/standalone/: CMakeLists.txt  earth.cpp
